# concatenated-zlib

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
bench/: README.md  time_load_chunks.py
concatenated_zlib/: __init__.py  _deflate.pyx  _shared.pyx  _stdlib_multi.py  _zlib.pyx  _zlibng.pyx  deflate.pxd
