[build-system]
requires = [
  "setuptools >= 64",
  "setuptools_scm[toml]>=6.2",
  "cython",
  "numpy",
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "concatenated_zlib/_version.py"
version_scheme = "post-release"


[tool.pytest.ini_options]
addopts = [
  "-v",
]

[tool.isort]
profile = "black"
py_version = "38"
force_single_line = true
extend_skip = ["setup.py", "docs/source/conf.py"]

[tool.coverage.run]
source = ["concatenated_zlib"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
  "^\\s+[.][.][.]$",
]
