[metadata]
name = concatenated_zlib
url = https://github.com/ap--/concatenated_zlib
download_url = https://github.com/ap--/concatenated_zlib
license = BSD
license_files = LICENSE
description = zlib decompress concatenated chunks
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas@poehlmann.io
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numcodecs
    numpy

[options.packages.find]
exclude =
    tests/*

[options.package_data]
concatenated_zlib =
    py.typed

[options.extras_require]
dev =
    pre-commit
    black
    pytest>=6
    pytest-cov
    mypy

[mypy]
python_version = 3.8
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
namespace_packages = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
plugins =
    numpy.typing.mypy_plugin

[flake8]
max-line-length = 88
extend-ignore = E203
